--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        FE workforce data collections
+        FE staff data collection
         <span class="govuk-caption-xl">{{releaseVersion}}</span>
       </h1>{{releaseVersion | log }}
       <p>
@@ -19,7 +19,7 @@
 
   
 
-      <h2 class="govuk-heading-m">Discovery prototypes</h2>
+      <h2 class="govuk-heading-m">Discovery</h2>
 
       <p>Sprint one <a href="/prototypes/questions/one">AoC questions in a flow</a></p>
 
