--- a/app/views/prototypes/questions/six.html
+++ b/app/views/prototypes/questions/six.html
@@ -14,7 +14,8 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Staff totals: question 6 of 9</span>
+  <span class="govuk-caption-xl">Staff totals 1 September 2017 - 31 August 2018<br> Question 6 of 9</span>
+
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -26,7 +27,7 @@
             <h1 class="govuk-heading-xl">
   How many staff did you have on flexible contracts? 
 </h1>
-<p>1 September 2017 - 31 August 2018</p>
+
             
 <div class="govuk-inset-text">
   Work this out as a number and percentage of total staff.
