--- a/app/views/prototypes/questions/eight.html
+++ b/app/views/prototypes/questions/eight.html
@@ -14,7 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Staff totals: question 8 of 9</span>
+  <span class="govuk-caption-xl">Staff totals 1 September 2017 - 31 August 2018<br> Question 8 of 9</span>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -26,8 +26,7 @@
             <h1 class="govuk-heading-xl">
   How many apprentices did you employ? 
 </h1>
-<p>1 September 2017 - 31 August 2018</p>
-          
+
   
 
   <div class="govuk-form-group">
