--- a/app/views/prototypes/questions/five.html
+++ b/app/views/prototypes/questions/five.html
@@ -14,22 +14,16 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <<span class="govuk-caption-xl">Staff totals: question 5 of 9</span>
+  <span class="govuk-caption-xl">Staff totals 1 September 2017 - 31 August 2018<br> Question 5 of 9</span>
+
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <p>1 September 2017 - 31 August 2018</p>
         
-          <div class="govuk-form-group">
-
-            <h1 class="govuk-heading-xl">
-  
-</h1>
-
-            
-
+        
+          
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
