--- a/app/views/prototypes/questions/seven.html
+++ b/app/views/prototypes/questions/seven.html
@@ -14,7 +14,8 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Staff totals: question 7 of 9</span>
+  <span class="govuk-caption-xl">Staff totals 1 September 2017 - 31 August 2018<br> Question 7 of 9</span>
+
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -34,7 +35,7 @@
       <h1 class="govuk-fieldset__heading">
         Did you employ any apprentices?
       </h1><br>
-       <p>1 September 2017 - 31 August 2018</p>
+       
     </legend>
     <span id="changed-name-hint" class="govuk-hint">
       This is apprentices employed under an apprenticeship contract. Please provide the number of apprentices actually employed by your organisation.
