--- a/app/views/prototypes/questions/two.html
+++ b/app/views/prototypes/questions/two.html
@@ -14,7 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-   <span class="govuk-caption-xl">Warwickshire college <br><br>Staff totals 1 September 2017 - 31 August 2018: question 2 of 9</span>
+   <span class="govuk-caption-xl">Warwickshire college <br><br>Staff totals 1 September 2017 - 31 August 2018<br> Question 2 of 9</span>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -26,7 +26,7 @@
             <h1 class="govuk-heading-xl">
   Your staff totals - Full Time Equivalent
 </h1>
-<p>For 1 September 2017 - 31 August 2018</p>
+
             
 <div class="govuk-inset-text">
   Include staff on flexible contracts but exclude agency workers.
