--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,7 +21,7 @@
 
       <h2 class="govuk-heading-m">Discovery</h2>
 
-      <p>Sprint one <a href="/prototypes/questions/one">AoC questions in a flow</a></p>
+      <p>Non-personalised staff data - <a href="/prototypes/questions/one"> AoC questions in a flow</a></p>
 
       
 
