--- a/app/views/prototypes/questions/answers.html
+++ b/app/views/prototypes/questions/answers.html
@@ -14,11 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Warwickshire college: staff totals</span>
-
-
-  
-            
+  <span class="govuk-caption-xl">Warwickshire college: staff totals</span>        
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
@@ -74,8 +70,8 @@
             </dt>
             <dd class="govuk-summary-list__value">
               <p class="govuk-body">300</p>
-              
             </dd>
+
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
                 Change<span class="govuk-visually-hidden"> contact details</span>
@@ -83,6 +79,7 @@
             </dd>
           </div>
         </dl>
+
 
         <h2 class="govuk-heading-m">2. Staff - full time equivalent</h2>
 
@@ -100,6 +97,7 @@
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Teaching
@@ -113,6 +111,7 @@
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Support
@@ -126,6 +125,7 @@
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Total
@@ -139,6 +139,7 @@
               </a>
             </dd>
           </div>
+
         </dl>
 
         <h2 class="govuk-heading-m">3. Staff - male and female</h2>
@@ -171,6 +172,7 @@
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Teaching male
@@ -180,7 +182,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> date of birth</span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
@@ -198,6 +200,7 @@
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Support male
@@ -225,35 +228,37 @@
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Total male
             </dt>
             <dd class="govuk-summary-list__value">
-              <p class="govuk-body">300</p>
-              
+              300
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> contact details</span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Total female
             </dt>
             <dd class="govuk-summary-list__value">
-              <p class="govuk-body">300</p>
-              
+              300
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> contact details</span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
+
         </dl>
+
 
         <h2 class="govuk-heading-m">4. Staff - male and female full time equivalent</h2>
 
@@ -285,6 +290,8 @@
               </a>
             </dd>
           </div>
+          
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Teaching male
@@ -312,6 +319,7 @@
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Support male
@@ -333,40 +341,44 @@
             <dd class="govuk-summary-list__value">
               100
             </dd>
+
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Total male
             </dt>
             <dd class="govuk-summary-list__value">
-              <p class="govuk-body">300</p>
-              
+              300
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> contact details</span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
+
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Total female
             </dt>
             <dd class="govuk-summary-list__value">
-              <p class="govuk-body">300</p>
-              
+              300
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> contact details</span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
+
+
         </dl>
 
 
@@ -387,16 +399,17 @@
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               No
             </dt>
             <dd class="govuk-summary-list__value">
-              
+              .
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> date of birth</span>
+                Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
@@ -418,14 +431,33 @@
               </a>
             </dd>
           </div>
-          
-          
-          
         </dl>
+
+
+        <h2 class="govuk-heading-m">7. How many apprentices did you employ?</h2>
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Apprentices
+            </dt>
+            <dd class="govuk-summary-list__value">
+              10
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+          </div>
+          
+        </dl><br>
+
+
 
         <h2 class="govuk-heading-m">Submit your staff data for 2017 - 2018</h2>
 
-        <p class="govuk-body">By submitting this notification you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
+        <p class="govuk-body">By submitting this notification you are confirming that, to the best of your knowledge, the details you are providing are correct.</p><br>
 
         <form action="/form-handler" method="post" novalidate>
 
@@ -441,11 +473,6 @@
     </div>
   </main>
 </div>
-
-
-  
-
-  
 
 </fieldset><br>
 
