--- a/app/views/prototypes/questions/one.html
+++ b/app/views/prototypes/questions/one.html
@@ -14,7 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Warwickshire college <br><br>Staff totals 1 September 2017 - 31 August 2018: question 1 of 9</span>
+  <span class="govuk-caption-xl">Warwickshire college <br><br>Staff totals 1 September 2017 - 31 August 2018<br> Question 1 of 9</span>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
