--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,9 +21,9 @@
 
       <h2 class="govuk-heading-m">Discovery</h2>
 
-      <p>Non-personalised staff data - <a href="/prototypes/questions/one"> AoC questions in a flow</a></p>
+      <p>Non-personalised staff data - <a href="/prototypes/questions/one"> AoC questions in a flow</a></p><br>
 
-      
+      <p></p>
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
