--- a/app/views/prototypes/questions/answers.html
+++ b/app/views/prototypes/questions/answers.html
@@ -400,19 +400,7 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              No
-            </dt>
-            <dd class="govuk-summary-list__value">
-              .
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
+          
         </dl>
 
         <h2 class="govuk-heading-m">6. Flexible contracts percentage</h2>
@@ -420,10 +408,10 @@
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Management 
+              Percentage 
             </dt>
             <dd class="govuk-summary-list__value">
-              100
+              10%
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
