--- a/app/views/prototypes/questions/three.html
+++ b/app/views/prototypes/questions/three.html
@@ -14,7 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Staff totals 1 September 2017 - 31 August 2018<br> Question 3 of 9</span>
+  <span class="govuk-caption-xl">1 September 2017 - 31 August 2018<br> Question 3 of 9</span>
 
 
 
