--- a/app/views/prototypes/questions/three.html
+++ b/app/views/prototypes/questions/three.html
@@ -25,7 +25,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  Your staff totals - male and female
+  Staff totals - male and female
 </h1>
 
             
