--- a/app/views/prototypes/questions/two.html
+++ b/app/views/prototypes/questions/two.html
@@ -24,7 +24,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  Staff totals - Full Time Equivalent
+  Staff totals - full time equivalent
 </h1>
 
             
