--- a/app/views/prototypes/questions/four.html
+++ b/app/views/prototypes/questions/four.html
@@ -25,7 +25,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  Staff totals - male and female Full Time Equivalent
+  Staff totals - male and female full time equivalent
 </h1>
 
 <div class="govuk-inset-text">
