--- a/app/views/prototypes/questions/answers2.html
+++ b/app/views/prototypes/questions/answers2.html
@@ -388,14 +388,14 @@
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Yes
+              No
             </dt>
             <dd class="govuk-summary-list__value">
-              100
+              .
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="five-change">
-                Change<span class="govuk-visually-hidden"></span>
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
           </div>
