home page added

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,6 +23,9 @@
 
       <p>Non-personalised staff data - <a href="/prototypes/questions/one"> AoC questions in a flow</a></p><br>
 
+
+      <p>Starting - <a href="/prototypes/starting/home"> Start pages and SLD portal</a></p><br>
+
       <p></p>
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
