--- a/app/views/prototypes/questions/one.html
+++ b/app/views/prototypes/questions/one.html
@@ -14,7 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Warwickshire college <br><br>1 September 2020 - 31 August 2021<br> Question 1 of 9</span>
+  <span class="govuk-caption-xl">Warwickshire College <br><br>1 September 2020 - 31 August 2021<br> Question 1 of 9</span>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
