submit copy on portal

--- a/app/views/prototypes/starting/home.html
+++ b/app/views/prototypes/starting/home.html
@@ -22,7 +22,7 @@
    
         
 
-        <h2 class="govuk-heading-l">Make a SUBmission</h2>
+        <h2 class="govuk-heading-l">Make a Submission</h2>
 
         <!-- <a href="what_data_do_you_want_to_submit" class="get-started govuk-!-font-size-19">Submit an ILR, EAS or ESF file</a> -->
 
