--- a/app/views/prototypes/starting/ethnicity.html
+++ b/app/views/prototypes/starting/ethnicity.html
@@ -34,7 +34,7 @@
       Asian or Asian British
     </label>
     <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any Asian background, for example, Bangladeshi, Chinese, Indian, Pakistani
+          Include Asian background, for example, Bangladeshi, Chinese, Indian, Pakistani
         </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
@@ -44,7 +44,7 @@
       Black, African, Black British or Caribbean
     </label>
     <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any Black background
+          Include Black background
         </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div><div class="govuk-form-group">
@@ -52,7 +52,7 @@
       Mixed or multiple ethnic groups
     </label>
     <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any Mixed background
+          Include Mixed background
         </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div><div class="govuk-form-group">
@@ -60,17 +60,17 @@
       White
     </label>
     <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any Asian background, for example, Bangladeshi, Chinese, Indian, Pakistani
+          Includes any White background
         </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="">
-      Asian or Asian British
+      Another ethnic group
     </label>
     <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes any Asian background, for example, Bangladeshi, Chinese, Indian, Pakistani
+          Include any other ethnic group, for example, Arab
         </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
@@ -80,7 +80,7 @@
       Prefer not to say
     </label>
     <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
-          Enter the prefer not to say total
+          Enter any prefer not to say
         </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
