--- a/app/views/prototypes/starting/answers.html
+++ b/app/views/prototypes/starting/answers.html
@@ -22,7 +22,7 @@
 
         <h1 class="govuk-heading-xl">Check your answers</h1>
 
-        <h2 class="govuk-heading-m">1. Staff vacancies</h2>
+        <h2 class="govuk-heading-m">Staff vacancies</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -43,7 +43,7 @@
         </dl>
 
 
-        <h2 class="govuk-heading-m">2. Proportion of funding spent on salaries</h2>
+        <h2 class="govuk-heading-m">Proportion of funding spent on salaries</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -92,12 +92,12 @@
 
         </dl>
 
-        <h2 class="govuk-heading-m">3. Staff - male and female</h2>
+        <h2 class="govuk-heading-m">Staff - ethnicity</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Management male
+              Asian or Asian British
             </dt>
             <dd class="govuk-summary-list__value">
               10
@@ -111,7 +111,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Management female
+             Black, African, Black British or Caribbean
             </dt>
             <dd class="govuk-summary-list__value">
               10
@@ -125,7 +125,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teaching male
+              Mixed or multiple ethnic groups
             </dt>
             <dd class="govuk-summary-list__value">
               10
@@ -139,7 +139,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teaching female
+              White
             </dt>
             <dd class="govuk-summary-list__value">
               10
@@ -153,7 +153,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Support male
+              Another ethnic group
             </dt>
             <dd class="govuk-summary-list__value">
               10
@@ -181,7 +181,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Total male
+              Prefer not to say
             </dt>
             <dd class="govuk-summary-list__value">
               30
@@ -193,24 +193,12 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Total female
-            </dt>
-            <dd class="govuk-summary-list__value">
-              30
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
+          
 
         </dl>
 
 
-        <h2 class="govuk-heading-m">4. Staff - male and female full time equivalent</h2>
+        <h2 class="govuk-heading-m">Staff - male and female</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -333,7 +321,7 @@
 
 
 
-        <h2 class="govuk-heading-m">5. Felexible contracts</h2>
+        <!-- <h2 class="govuk-heading-m">5. Felexible contracts</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -372,7 +360,7 @@
         </dl>
 
 
-       <!-- <h2 class="govuk-heading-m">7. How many apprentices did you employ?</h2>
+       <h2 class="govuk-heading-m">7. How many apprentices did you employ?</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
