--- a/app/views/prototypes/starting/two.html
+++ b/app/views/prototypes/starting/two.html
@@ -52,7 +52,7 @@
 </fieldset><br><br>
 
 
-          <a href="ethnicity" class="govuk-button show-continue" style="display: inline;">
+          <a href="staff" class="govuk-button show-continue" style="display: inline;">
       Save and Continue
     </a>
        
