--- a/app/views/prototypes/starting/details.html
+++ b/app/views/prototypes/starting/details.html
@@ -4,18 +4,14 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  {% from 'phase-banner/macro.njk' import govukPhaseBanner %}
-{{ govukPhaseBanner({
-tag: {
-text: "alpha"
-},
-html: 'This is a new service - your <a href="#" class="govuk-link">feedback</a> will help us to improve it.'
-}) }}
-<a href="#" class="govuk-back-link">Back</a>
+  
 
 {% endblock %}
 
 {% block content %}
+
+
+        
 
 
 
@@ -51,7 +47,7 @@ html: 'This is a new service - your <a href="#" class="govuk-link">feedback</a> 
     
 <br>
 
-  <a href="which-test-two" class="govuk-button" type="submit">Sign in</a>
+  <a href="home" class="govuk-button" type="submit">Sign in</a>
 
   </div>
 
