--- a/app/views/prototypes/starting/ethnicity.html
+++ b/app/views/prototypes/starting/ethnicity.html
@@ -90,8 +90,8 @@
 </div>
 
 
-          <a href="answers" class="govuk-button show-continue" style="display: inline;">
-      Save and Continue
+          <a href="leaving" class="govuk-button show-continue" style="display: inline;">
+      Save and continue
     </a>
        
       </div>
