--- a/app/views/prototypes/starting/one.html
+++ b/app/views/prototypes/starting/one.html
@@ -47,7 +47,7 @@
 
 
           <a href="two" class="govuk-button show-continue" style="display: inline;">
-      Save and Continue
+      Save and continue
     </a>
        
       </div>
