--- a/app/views/prototypes/starting/staff.html
+++ b/app/views/prototypes/starting/staff.html
@@ -67,7 +67,7 @@
 
 
           <a href="ethnicity" class="govuk-button show-continue" style="display: inline;">
-      Save and Continue
+      Save and continue
     </a>
        
       </div>
