--- a/app/views/prototypes/starting/two.html
+++ b/app/views/prototypes/starting/two.html
@@ -24,7 +24,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  What proportion of government funding do you spend on staff salaries?
+  What proportion of funding do you spend on staff salaries?
 </h1>
 
             
@@ -53,7 +53,7 @@
 
 
           <a href="staff" class="govuk-button show-continue" style="display: inline;">
-      Save and Continue
+      Save and continue
     </a>
        
       </div>
