--- a/app/views/prototypes/starting/three.html
+++ b/app/views/prototypes/starting/three.html
@@ -94,7 +94,7 @@
 
 
           <a href="four" class="govuk-button show-continue" style="display: inline;">
-      Save and Continue
+      Save and continue
     </a>
        
       </div>
