--- a/app/views/prototypes/starting/leaving.html
+++ b/app/views/prototypes/starting/leaving.html
@@ -39,18 +39,17 @@
       Total leavers
     </label>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
+  </div><br><br>
 
 
   <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-      <h2 class="govuk-fieldset__heading">
-        What reasons did they give for leaving?
-      </h2>
+      <h2 class="govuk-heading-l">
+        What reasons did they give for leaving?</h2>
     </legend>
     <span id="citizenship-conditional-hint" class="govuk-hint">
-      Select the reasons.
+      Could we collect personal information here?
     </span>
     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
@@ -62,7 +61,7 @@
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-email">
-            Promotion
+            Left the sector
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
         </div>
@@ -71,13 +70,13 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional-2" name="citizen" type="checkbox" value="phone" data-aria-controls="conditional-citizenship-conditional-2">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-2">
-          Left the sector
+          Retired
         </label>
       </div>
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-2">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-phone">
-            Pretired
+            Retired
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-phone" name="contact-by-phone" type="tel">
         </div>
@@ -86,13 +85,13 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional-3" name="citizen" type="checkbox" value="text message" data-aria-controls="conditional-citizenship-conditional-3">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-3">
-          Text message
+          New job
         </label>
       </div>
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-3">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-text">
-            Mobile phone number
+            Illness
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-text" name="contact-by-text" type="tel">
         </div>
