--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,6 +26,10 @@
 
       <p>Concept one - <a href="/prototypes/starting/details">AoC survey style</a></p><br>
 
+      <p>Concept two - <a href="#">Staff self service portal</a></p><br>
+
+      <p>Concept three - <a href="#">Hybrid - upoad a spreadsheet</a></p><br>
+
       <p></p>
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
