--- a/app/views/prototypes/starting/answers.html
+++ b/app/views/prototypes/starting/answers.html
@@ -37,8 +37,21 @@
                 Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
+
           </div>
-         
+         <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Long-term subjects
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Construction, Hairdresssing
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="one">
+                Change<span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+          </div>
           
         </dl>
 
@@ -198,7 +211,8 @@
         </dl>
 
 
-        <h2 class="govuk-heading-m">Staff - male and female</h2>
+        <h2 class="govuk-heading-m">Staff - male and female
+        </h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
