--- a/app/views/prototypes/starting/leaving.html
+++ b/app/views/prototypes/starting/leaving.html
@@ -14,8 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">1 September 2017 - 31 August 2018</span>
-
+  <span class="govuk-caption-xl">Warwickshire college</span>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
