--- a/app/views/prototypes/starting/answers.html
+++ b/app/views/prototypes/starting/answers.html
@@ -14,7 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Warwickshire college: staff</span>        
+  <span class="govuk-caption-xl">Warwickshire college</span>        
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
