--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
 
       <p>Concept two - <a href="#">Staff self service portal</a></p><br>
 
-      <p>Concept three - <a href="#">Hybrid - upoad a spreadsheet</a></p><br>
+      <p>Concept three - <a href="#">Hybrid - upload a spreadsheet and we'll sort it out</a></p><br>
 
       <p></p>
 
