--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
         <span class="govuk-caption-xl">{{releaseVersion}}</span>
       </h1>{{releaseVersion | log }}
       <p>
-        HTML prototypes of GOV.UK services.
+        Prototypes
       </p>
 
   
