--- a/app/views/prototypes/starting/two.html
+++ b/app/views/prototypes/starting/two.html
@@ -44,7 +44,28 @@
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="#"><strong>
-      Salary spend</strong>
+      Teacher</strong>
+    </label>
+    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
+  </div>
+
+<div class="govuk-form-group">
+    <label class="govuk-label" for="#"><strong>
+      Admin</strong>
+    </label>
+    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
+  </div>
+
+  <div class="govuk-form-group">
+    <label class="govuk-label" for="#"><strong>
+      Support</strong>
+    </label>
+    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
+  </div>
+
+  <div class="govuk-form-group">
+    <label class="govuk-label" for="#"><strong>
+      Non-teaching manager</strong>
     </label>
     <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
   </div>
