--- a/app/views/prototypes/starting/two.html
+++ b/app/views/prototypes/starting/two.html
@@ -34,41 +34,35 @@
   
 
   
-
-
-  
-
-
-  
-
-
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="#"><strong>
-      Teacher</strong>
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
-  </div>
-
 <div class="govuk-form-group">
-    <label class="govuk-label" for="#"><strong>
-      Admin</strong>
+    <label class="govuk-label" for="address-postcode">
+      Teacher
     </label>
-    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
+    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
 
   <div class="govuk-form-group">
-    <label class="govuk-label" for="#"><strong>
-      Support</strong>
+    <label class="govuk-label" for="address-postcode">
+      Admin
     </label>
-    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
+    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
 
   <div class="govuk-form-group">
-    <label class="govuk-label" for="#"><strong>
-      Non-teaching manager</strong>
+    <label class="govuk-label" for="address-postcode">
+      Support
     </label>
-    <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
+    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
+
+  <div class="govuk-form-group">
+    <label class="govuk-label" for="address-postcode">
+      Non-teaching manager
+    </label>
+    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+  </div>
+
+  <br>
 
 </fieldset><br><br>
 
