--- a/app/views/prototypes/starting/leaving.html
+++ b/app/views/prototypes/starting/leaving.html
@@ -66,6 +66,8 @@
         </div>
 
       </div>
+
+
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional-2" name="citizen" type="checkbox" value="phone" data-aria-controls="conditional-citizenship-conditional-2">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-2">
@@ -81,6 +83,11 @@
         </div>
 
       </div>
+
+      
+
+
+
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional-3" name="citizen" type="checkbox" value="text message" data-aria-controls="conditional-citizenship-conditional-3">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-3">
@@ -90,20 +97,29 @@
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-3">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-text">
-            Illness
+            Left the sector
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-text" name="contact-by-text" type="tel">
         </div>
 
       </div>
+
+      
+
+
+
+
+
+
     </div>
-  </fieldset>
+
+
+</fieldset>
+
+
 </div>
 
-
-  
-
-</fieldset><br><br>
+<br><br>
 
 
           <a href="answers" class="govuk-button show-continue" style="display: inline;">
