--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,11 +24,11 @@
       <p>Non-personalised staff data - <a href="/prototypes/questions/one"> AoC questions in a flow</a></p><br>
 
 
-      <p>Concept one - <a href="/prototypes/starting/details">AoC survey style</a></p><br>
+      <p>Concept one - <a href="/prototypes/starting/details">Form</a></p><br>
 
-      <p>Concept two - <a href="#">Staff self service portal</a></p><br>
+      <p>Concept two - <a href="#">Self service</a></p><br>
 
-      <p>Concept three - <a href="#">Hybrid - upload a spreadsheet and we'll sort it out</a></p><br>
+      
 
       <p></p>
 
