--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
 
       <p>Concept two - <a href="#">Self service</a></p><br>
 
-      
+      <h2 class="govuk-heading-s">Sprint two</h2>
 
       <p></p>
 
