--- a/app/views/prototypes/starting/home.html
+++ b/app/views/prototypes/starting/home.html
@@ -54,7 +54,7 @@
                 </div>
     
                 <div class="govuk-grid-column-one-third tile">
-                    <a class="min-height" href="one">
+                    <a class="min-height" href="start">
                         <span class="govuk-heading-m heading">Staff data</span>
                         <span class="govuk-heading-s heading">28 November 2020</span>
                     </a>
