--- a/app/views/prototypes/starting/one.html
+++ b/app/views/prototypes/starting/one.html
@@ -24,24 +24,41 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  How many teaching vacancies do you have now?
+  How many staff do you employ?
 </h1>
 
             
 <div class="govuk-inset-text">
-  Include roles filled with tempoary staff
+  Include roles filled with tempoary staff but not agency workers.<br>
+  Include part-time staff.
 </div>
 
   <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Total teaching vacancies
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
-
-
-
-  
+  <fieldset class="govuk-fieldset">
+    
+    <div class="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+          Up to 20 people
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+          21 to 100 people
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+          101 + people
+        </label>
+      </div>
+      
+    </div>
+  </fieldset>
+</div>
 
 </fieldset><br><br>
 
