--- a/app/views/prototypes/starting/start.html
+++ b/app/views/prototypes/starting/start.html
@@ -11,40 +11,27 @@
 {% block content %}
 
 
-
+<div class="govuk-width-container">
   
-  
 
-      <div class="govuk-width-container">
-  <div class="govuk-breadcrumbs">
-    <ol class="govuk-breadcrumbs__list">
-      <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="#">Home</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="#">Section</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="page">Subsection</li>
-    </ol>
-  </div>
+  <span class="govuk-caption-xl">Warwickshire college</span>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">FE staff return</h1>
+        <h1 class="govuk-heading-xl">FE workforce collection</h1>
         <span class="govuk-caption-xl">August 2019 to September 2020</span><br>
 
-        <p class="govuk-body">Use this service to:</p>
+        <p class="govuk-body">You need to tell us about the people you employ - every year.</p>
 
         <ul class="govuk-list govuk-list--bullet">
           <li>tell us about your workforce</li>
-          <li>update your name, address or other details</li>
+          <li>submit your staff details by the dealine date</li>
           <li>do something else</li>
         </ul>
+        <p class="govuk-body">You don't need to tell us about the staff of your subcontractors.</p>
 
-        <p class="govuk-body">Registering takes around 5 minutes.</p>
-
-        <a href="#" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
+        <a href="one" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
           Start now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
