--- a/app/views/prototypes/starting/start.html
+++ b/app/views/prototypes/starting/start.html
@@ -14,7 +14,7 @@
 <div class="govuk-width-container">
   
 
-  <span class="govuk-caption-xl">Warwickshire college</span>
+  <span class="govuk-caption-xl">Impact Training Limited</span>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
