--- a/app/views/prototypes/starting/two.html
+++ b/app/views/prototypes/starting/two.html
@@ -14,7 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-   <span class="govuk-caption-xl">Warwickshire college</span>
+   <span class="govuk-caption-xl">Impact Training Limited</span>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -24,12 +24,12 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  What proportion of funding do you spend on staff salaries?
+  Add your staff details 
 </h1>
 
             
 <div class="govuk-inset-text">
-  Enter the percentage
+  Enter each staff member one by one
 </div>
   
 
