--- a/app/views/prototypes/starting/one.html
+++ b/app/views/prototypes/starting/one.html
@@ -14,7 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Warwickshire college</span>
+  <span class="govuk-caption-xl">Impact Training Limited</span>
 
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
