--- a/app/views/prototypes/starting/two.html
+++ b/app/views/prototypes/starting/two.html
@@ -31,36 +31,16 @@
 <div class="govuk-inset-text">
   Enter each staff member one by one
 </div>
+  <div class="govuk-form-group">
+  <label class="govuk-label" for="full-name">
+    Full name
+  </label>
+  <input class="govuk-input" id="full-name" name="full-name" type="text" autocomplete="name" spellcheck="false">
+</div>
+
   
 
   
-<div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Teacher
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
-
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Admin
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
-
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Support
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
-
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Non-teaching manager
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
 
   <br>
 
